Rework site layout in an attempt to fix the scrollbar issues

--- a/themes/transition.eco/assets/css/_primary-nav-toggle.scss
+++ b/themes/transition.eco/assets/css/_primary-nav-toggle.scss
@@ -1,75 +1,71 @@
 .primary-nav-toggle {
-    width: 60px;
-    height: 45px;
-    position: relative;
-    margin: 50px auto;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .5s ease-in-out;
-    -moz-transition: .5s ease-in-out;
-    -o-transition: .5s ease-in-out;
-    transition: .5s ease-in-out;
-    cursor: pointer;
+  width: $primary-nav-toggle-width;
+  height: $primary-nav-toggle-height;
+  position: relative;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
 }
 
 .primary-nav-toggle span {
-    display: block;
-    position: absolute;
-    height: 9px;
-    width: 100%;
-    margin-left: 1.5rem;
-    background: $primary-color;
-    border-radius: 9px;
-    opacity: 1;
-    left: 0;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
+  display: block;
+  position: absolute;
+  height: $burger-item-height;
+  width: 100%;
+  background: $secondary-color;
+  border-radius: $burger-item-border-radius;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
 }
 
-/* Icon 3 */
-
 .primary-nav-toggle span:nth-child(1) {
-    top: 0;
+  top: 0;
 }
 
 .primary-nav-toggle span:nth-child(2), .primary-nav-toggle span:nth-child(3) {
-    top: 18px;
+  top: $burger-item-height + $burger-item-space-between;
 }
 
 .primary-nav-toggle span:nth-child(4) {
-    top: 36px;
+  top: 2*($burger-item-height + $burger-item-space-between);
 }
 
 .primary-nav-toggle--opened span:nth-child(1) {
-    top: 18px;
-    width: 0%;
-    left: 50%;
+  top: $burger-item-height + $burger-item-space-between;
+  width: 0;
+  left: 50%;
 }
 
 .primary-nav-toggle--opened span:nth-child(2) {
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .primary-nav-toggle--opened span:nth-child(3) {
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
 
 .primary-nav-toggle--opened span:nth-child(4) {
-    top: 18px;
-    width: 0%;
-    left: 50%;
+  top: $burger-item-height + $burger-item-space-between;
+  width: 0;
+  left: 50%;
 }
