--- a/themes/transition.eco/assets/css/_shortcode--columns-container.scss
+++ b/themes/transition.eco/assets/css/_shortcode--columns-container.scss
@@ -1,6 +1,6 @@
 .columns-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(20ch, 1fr));
     grid-gap: 1.5rem;
 }
 
